--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,4 +6,49 @@
 
 .topbarWrapper {
   display: flex;
+  justify-content:space-between;
+  align-items: center;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.logo {
+  font-size: 30px;
+  font-weight: bold;
+  color: darkcyan;
+  cursor: pointer;
+}
+
+.topright {
+  display: flex;
+  align-items: center;
+}
+
+.topbarIconContainer {
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  color: #555;
+}
+
+.topIconBadge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.topAvatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  
 }
