--- a/src/components/pages/new-user/newuser.css
+++ b/src/components/pages/new-user/newuser.css
@@ -1,3 +1,44 @@
 .newUser {
   flex: 4;
 }
+
+.newUserForm {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newUserItem {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.newUserItem>label{
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: rgb(183, 199, 214);
+}
+
+.newUserItem>input {
+  height: 20px;
+  padding: 20px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.newUserGender>label {
+  margin: 10px;
+  font-size: 15px;
+  color: rgb(183, 199, 214);
+}
+
+.newUserGender>input {
+  margin-top: 10px;
+}
+
+.newUserSelect {
+  height: 40px;
+  border-radius: 5px;
+}
