--- a/src/components/pages/newproduct/newProduct.css
+++ b/src/components/pages/newproduct/newProduct.css
@@ -7,6 +7,28 @@
   display: flex;
   flex-direction: column;
   width: 500px;
+  margin-top: 20px;
+}
+
+.newProductTitle {
+  color: rgb(167, 164, 164);
+}
+
+.newProductIcon {
+  cursor: pointer;
+}
+
+.newProductImg {
+  display: flex;
+  align-items: center;
+}
+
+.productUploadImg {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-right: 20px;
 }
 
 .newProductItem {
@@ -16,35 +38,25 @@
   margin-right: 20px;
 }
 
-.newUserItem>label{
+.newProductItem>label{
   margin-bottom: 10px;
   font-weight: 600;
   color: rgb(127, 135, 143);
 }
 
-.newUserItem>input {
+.newProductItem>input {
   height: 20px;
   padding: 20px;
   border: 1px solid gray;
   border-radius: 5px;
 }
 
-.newUserGender>label {
-  margin: 10px;
-  font-size: 15px;
-  color: rgb(134, 138, 141);
-}
-
-.newUserGender>input {
-  margin-top: 10px;
-}
-
-.newUserSelect {
+.newProductSelect {
   height: 40px;
   border-radius: 5px;
 }
 
-.newUserButton {
+.newProductButton {
   width: 200px;
   height: 30px;
   border: none;
@@ -54,5 +66,6 @@
   cursor: pointer;
   padding: 7px 10px;
   font-weight: 600;
+  font-size: 1rem;
   margin-top: 30px;
 }
